--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,27 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+}
+
+a {
+    font-size: 50px;
+    font-weight: bold;
+    text-decoration: none;
+    text-align: left;
+    color:rgb(33, 33, 33)
+    
+}
+
+.nav {
+    text-align: left;
+
+}
+
+.nav ul {
+    padding: 0%;
+}
+
+.nav ul li {
+    list-style-type: none;
+    margin: 30px;
 }
