--- a/css/styles.css
+++ b/css/styles.css
@@ -25,3 +25,25 @@ a {
     margin: 30px;
     text-decoration: none;
 }
+
+
+
+/* unvisited link */
+a:link {
+    color: rgb(0, 00, 00);
+  }
+  
+  /* visited link */
+  a:visited {
+    color: rgb(0, 0, 0);
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: rgb(44, 44, 44);
+  }
+  
+  /* selected link */
+  a:active {
+    color: rgb(44, 44, 44);
+  }
