--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #f7f7f7;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 900;
     color:rgb(33, 33, 33)
@@ -26,11 +27,9 @@ a {
     text-decoration: none;
 }
 
-
-
 /* unvisited link */
 a:link {
-    color: rgb(0, 00, 00);
+    color: rgb(0, 0, 0);
   }
   
   /* visited link */
@@ -40,10 +39,10 @@ a:link {
   
   /* mouse over link */
   a:hover {
-    color: rgb(44, 44, 44);
+    color: #1e1e1e;
   }
   
   /* selected link */
   a:active {
-    color: rgb(44, 44, 44);
+    color: #1e1e1e;
   }
