--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: #f7f7f7;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
     font-weight: 900;
     color:rgb(33, 33, 33)
 }
@@ -28,8 +28,8 @@ a {
 
 .library {
   text-align: left;
-  font-family: Arial, Helvetica, sans-serif;
-  color:rgb(33, 33, 33)
+  font-family: Helvetica, sans-serif;
+  margin: 30px;
 }
 
 .library h1 {
