--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,12 @@
 body {
     background-color: #f7f7f7;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: 900;
     color:rgb(33, 33, 33)
 }
 
 a {
     font-size: 50px;
-    font-weight: bold;
+    font-weight: bolder;
     text-decoration: none;
     text-align: left;    
 }
@@ -29,14 +28,23 @@ a {
 .library {
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
-  color:rgb(33, 33, 33)
+  margin: 30px;
 }
 
 .library h1 {
+  font-weight: bolder;
+}
+
+.library h2 {
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  padding-top: 50px;
 }
 
 .library ul {
+  font-size: 25px;
+  font-weight: 400;
+  text-align: left;    
   padding: 0%;
 }
 
