caps vs no caps

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 a {
-    font-size: 50px;
+    font-size: 30px;
     font-weight: bolder;
     text-decoration: none;
     text-align: left;    
@@ -21,7 +21,7 @@ a {
 
 .nav ul li {
     list-style-type: none;
-    margin: 30px;
+    margin: 20px 0px 0px 30px;
     text-decoration: none;
 }
 
@@ -32,6 +32,7 @@ a {
 }
 
 .library h1 {
+  font-size: 30px;
   font-weight: bolder;
 }
 
