--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ a {
 }
 
 .nav ul li {
+    font-size: 30px;
     list-style-type: none;
     margin: 20px 0px 0px 30px;
     text-decoration: none;
