--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,9 @@ a {
 
 .nav ul li {
     font-size: 30px;
+    font-weight: bolder;
     list-style-type: none;
     margin: 20px 0px 0px 30px;
-    text-decoration: none;
 }
 
 /* unvisited link */
