--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,12 @@ body {
     color:rgb(33, 33, 33)
 }
 
+p {
+    font-size: 30px;
+    font-weight: bolder;
+    text-align: left;
+}
+
 a {
     font-size: 30px;
     font-weight: bolder;
@@ -20,8 +26,6 @@ a {
 }
 
 .nav ul li {
-    font-size: 30px;
-    font-weight: bolder;
     list-style-type: none;
     margin: 20px 0px 0px 30px;
 }
@@ -31,17 +35,17 @@ a:link {
     color: rgb(0, 0, 0);
   }
   
-  /* visited link */
-  a:visited {
+/* visited link */
+a:visited {
     color: rgb(0, 0, 0);
-  }
+}
   
-  /* mouse over link */
-  a:hover {
+/* mouse over link */
+a:hover {
     color: #1e1e1e;
-  }
+}
   
-  /* selected link */
-  a:active {
+/* selected link */
+a:active {
     color: #1e1e1e;
-  }
+}
