--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
 p {
     font-size: 30px;
     font-weight: bolder;
+    text-decoration: none;
     text-align: left;
 }
 
@@ -14,7 +15,7 @@ a {
     font-size: 30px;
     font-weight: bolder;
     text-decoration: none;
-    text-align: left;    
+    text-align: left;
 }
 
 .nav {
