--- a/css/styles-library.css
+++ b/css/styles-library.css
@@ -8,6 +8,7 @@ body {
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     margin: 30px;
+    text-decoration: none;
 }
 
 .library {
