Update styles-library.css footer

--- a/css/styles-library.css
+++ b/css/styles-library.css
@@ -44,6 +44,10 @@ body {
     text-decoration: none;
 }
 
+footer {
+    text-align: center;
+}
+
 /* unvisited link */
 a:link {
     color: rgb(0, 0, 0);
