--- a/css/styles.css
+++ b/css/styles.css
@@ -4,15 +4,14 @@ body {
     color:rgb(33, 33, 33)
 }
 
-a {
-    font-size: 30px;
-    font-weight: bolder;
-    text-decoration: none;
+.nav {
     text-align: left;
 }
 
-.nav {
-    text-align: left;
+.nav a {
+    font-size: 30px;
+    font-weight: bolder;
+    text-decoration: none;
 }
 
 .nav ul {
@@ -24,7 +23,7 @@ a {
     margin: 20px 0px 0px 30px;
 }
 
-footer a {
+footer {
     text-align: center;
     padding: 100px 0px 30px 0px;
 }
