--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body {
 .nav ul li {
     list-style-type: none;
     margin: 20px 0px 0px 30px;
+    padding-bottom: 30px;
 }
 
 /* unvisited link */
