--- a/css/styles.css
+++ b/css/styles.css
@@ -20,8 +20,7 @@ body {
 
 .nav ul li {
     list-style-type: none;
-    margin: 0px 0px 0px 30px;
-    padding-bottom: 30px;
+    padding: 20px 0px 30px 30px;
 }
 
 p {
