--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffffff;
+    background-color: #f2f2ea;
     font-family: Arial, Helvetica, sans-serif;
     color:rgb(33, 33, 33)
 }
