--- a/css/styles.css
+++ b/css/styles.css
@@ -25,20 +25,20 @@ body {
 
 /* unvisited link */
 a:link {
-    color: #ffffff;
+    color: #000000;
   }
   
 /* visited link */
 a:visited {
-    color: #ffffff;
+    color: #000000;
 }
   
 /* mouse over link */
 a:hover {
-    color: #ffffff;
+    color: #000000;
 }
   
 /* selected link */
 a:active {
-    color: #ffffff;
+    color: #000000;
 }
