--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,12 @@ body {
 }
 
 .nav ul {
-    text-align: center;
+    text-align: left;
     padding: 0%;
 }
 
 .nav ul li {
-    text-align: center;
+    text-align: left;
     list-style-type: none;
     padding: 30px 0px 0px 30px;
 }
