--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
 
 .nav {
     text-align: center;
+    padding: 0%;
 }
 
 .nav a {
@@ -22,7 +23,7 @@ body {
 .nav ul li {
     text-align: center;
     list-style-type: none;
-    padding: 30px 0px 0px 30px;
+    padding: 0%;
 }
 
 /* unvisited link */
