--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body {
+    text-align: center;
     background-color: #f7f7f7;
     font-family: Arial, Helvetica, sans-serif;
     color:rgb(33, 33, 33)
